--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,23 +1,70 @@
-﻿@inherits LayoutComponentBase
+﻿<!-- Shared/MainLayout.razor -->
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
+@inherits LayoutComponentBase
+<!-- _Imports.razor or MainLayout.razor -->
+
+<link rel="stylesheet" href="css/app.css" />
+
+
+<div class="container-fluid">
+    <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="/">Express Haven</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Sign In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/package-registration">Package Registration</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/track-package">Track A Package</a>
+                        </li>
+                        <!-- Add more navigation links as needed -->
+                    </ul>
+                    <!-- Add more navigation links as needed -->
+                </ul>
+            </div>
+        </nav>
     </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+    <div class="row mt-3">
+        <div class="col">
+            <header>
+                <h1>Welcome to Express Haven Shipping</h1>
+            </header>
         </div>
+    </div>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+                Manage your packages and shipments with ease using our app.
+            </p>
+            <p>
+                Sign in to track your packages, schedule shipments, and more.
+            </p>
+        </div>
+        <div class="col-md-6">
+            <!-- Add an image or additional content here -->
+            <img src="images/package1.jpg" alt="Package 1" class="img-fluid" />
+            <img src="images/package2.jpg" alt="Package 2" class="img-fluid" />
+            <img src="images/package3.jpg" alt="Package 3" class="img-fluid" />
 
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col">
+            <footer>
+                <p>&copy; 2024 Package Shipping App</p>
+            </footer>
+        </div>
+    </div>
 </div>
