updated layout and home page

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -33,31 +33,8 @@
             </div>
         </nav>
     </div>
-
-    <div class="row mt-3">
-        <div class="col">
-            <header>
-                <h1>Welcome to Express Haven Shipping</h1>
-            </header>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
-            <p>
-                Manage your packages and shipments with ease using our app.
-            </p>
-            <p>
-                Sign in to track your packages, schedule shipments, and more.
-            </p>
-        </div>
-        <div class="col-md-6">
-            <!-- Add an image or additional content here -->
-            <img src="images/package1.jpg" alt="Package 1" class="img-fluid" />
-            <img src="images/package2.jpg" alt="Package 2" class="img-fluid" />
-            <img src="images/package3.jpg" alt="Package 3" class="img-fluid" />
-
-        </div>
+    <div class="content">
+    @Body
     </div>
 
     <div class="row mt-3">
