--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -3,7 +3,7 @@
 @page "/"
 @inherits LayoutComponentBase
 
-<div class="container">
+@* <div class="container">
     <h1>Welcome to Express Haven Shipping</h1>
 
     <div class="row">
@@ -23,4 +23,31 @@
             <img src="images/package3.jpg" alt="Package 3" class="img-fluid" />
         </div>
     </div>
-</div>
+</div> *@
+
+    <div class="row mt-3">
+        <div class="col">
+            <header>
+                <h1>Welcome to Express Haven Shipping</h1>
+            </header>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-6">
+            <p>
+                Manage your packages and shipments with ease using our app.
+            </p>
+            <p>
+                Sign in to track your packages, schedule shipments, and more.
+            </p>
+        </div>
+        <div class="col-md-6">
+            <!-- Add an image or additional content here -->
+            <img src="images/package1.jpg" alt="Package 1" class="img-fluid" />
+            <img src="images/package2.jpg" alt="Package 2" class="img-fluid" />
+            <img src="images/package3.jpg" alt="Package 3" class="img-fluid" />
+
+        </div>
+    </div>
