Login and Registration Created

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -18,6 +18,9 @@
                             <a class="nav-link" href="/login">Sign In</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/registration">Registration</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/package-registration">Package Registration</a>
                         </li>
                         <li class="nav-item">
