--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -14,7 +14,13 @@
             <p>
                 Sign in to track your packages, schedule shipments, and more.
             </p>
-            <a href="/login" class="btn btn-primary">Sign In</a>
+            <p>
+            <NavLink href="/login" class="btn btn-primary">Sign In</NavLink>
+              </p>
+              <p>
+                <NavLink href="/registration" class="btn btn-secondary">Registration</NavLink>
+            </p>
+          
         </div>
         <div class="col-md-6">
             <!-- Add package images -->
