--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/track-package">Track A Package</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/change-status">Change Status</a>
+                        </li>
                         <!-- Add more navigation links as needed -->
                     </ul>
                     <!-- Add more navigation links as needed -->
