--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,6 +2,7 @@
 
 @page "/"
 @inherits LayoutComponentBase
+@using ShipAndTrack.Components
 
 @* <div class="container">
     <h1>Welcome to Express Haven Shipping</h1>
@@ -57,3 +58,12 @@
 
         </div>
     </div>
+
+       <!-- Add link to the dashboard -->
+    <div class="row mt-4">
+        <div class="col-md-12">
+            <p>View your packages:</p>
+            <a href="/Dashboard" class="btn btn-secondary">Dashboard</a>
+        </div>
+    </div>
+
