--- a/Components/Pages/ChangeStatus.razor
+++ b/Components/Pages/ChangeStatus.razor
@@ -13,8 +13,8 @@
     <div class="row align-items-center mt-2">
         <AntiforgeryToken />
         <div class="col-auto">
-            <input class="form-control" oninput="this.value=this.value.toUpperCase()"  @bind="@searchValue" type="search" placeholder="Tracking number"
-                aria-label="Search" name="trackingNumber" id="trackingNumber">
+            <input class="form-control" oninput="this.value=this.value.toUpperCase()" @bind="@searchValue" type="search"
+                placeholder="Tracking number" aria-label="Search" name="trackingNumber" id="trackingNumber">
         </div>
 
         <div class="col-auto">
