--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="/package-registration">Package Registration</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/track-package">Track A Package</a>
+                            <a class="nav-link" href="/track">Track A Package</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/change-status">Change Status</a>
@@ -37,7 +37,7 @@
         </nav>
     </div>
     <div class="content">
-    @Body
+        @Body
     </div>
 
     <div class="row mt-3">
