--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -61,7 +61,7 @@
     
     <!-- Link to the dashboard -->
     <div class="dashboard-link" style="margin-top: 20px;">
-        <p>View your packages:</p>
+        <p>Go to the Dashboard to View All of Our Shipping Packages:</p>
         <a href="/Dashboard" class="btn btn-secondary">Dashboard</a>
     </div>
 </div>
