--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -41,7 +41,7 @@
     </div>
 
     <div class="row mt-3">
-        <div class="col">
+        <div class="col text-center">
             <footer>
                 <p>&copy; 2024 Package Shipping App</p>
             </footer>
