--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -1,3 +1,23 @@
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.row {
+    flex: 1;
+}
+
 .page {
     position: relative;
     display: flex;
