--- a/Components/Pages/Login.razor
+++ b/Components/Pages/Login.razor
@@ -1,45 +1,45 @@
-﻿@page "/login"
+﻿<!-- Pages/Login.razor -->
+@page "/login"
 @inherits LayoutComponentBase
+@inject NavigationManager NavigationManager
+@using ShipAndTrack.Models
+@using Microsoft.AspNetCore.Components.Forms
+
 
 <div class="container">
     <h1>Login</h1>
-
-    @if (loginSuccess)
-    {
-        <div class="alert alert-success" role="alert">
-            Login successful!
+    <hr>
+    <EditForm Model="user" OnValidSubmit="HandleSubmit" class="row g-3" FormName="LoginForm">
+        <ValidationSummary />
+        <div class="col-md-6">
+            <div>
+                <label for="email">Email:</label>
+                <InputText type="email" class="form-control" placeholder="youremail@email.com" @bind-Value="user.Email"
+                    required />
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <InputText type="password" class="form-control" placeholder="Enter Password" @bind-Value="user.Password"
+                    required />
+            </div>
         </div>
-    }
-
-    <form @onsubmit="HandleSubmit">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" class="form-control" id="username" @bind="username" />
+        <div>
+            <button type="submit" class="btn btn-primary">Login</button>
         </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" class="form-control" id="password" @bind="password" />
+        <div>
+            <p>You do not have an account? <a href="/registration">Register</a></p>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+    </EditForm>
 </div>
 
 @code {
-    private string username;
-    private string password;
-    private bool loginSuccess = false;
-
-    private async Task HandleSubmit()
+    private User user = new User();
+    private string password = string.Empty;
+    protected void HandleSubmit(EditContext context)
     {
-        if (username == "user" && password == "password")
+        if (context.Validate())
         {
-            loginSuccess = true;
-            Console.WriteLine($"Username: {username}, Password: {password}");
-        }
-        else
-        {
-            loginSuccess = false;
+            NavigationManager.NavigateTo("/");
         }
     }
-
 }
